# SM-Tool

./: .gitignore  LICENSE.md  README.md  project.toml  pyproject.toml
src/: Process Load Function Test.py  TUI.py  app.py  benchamrktest.py  cython_setup.py  functionalityv2.py  graphicsv2.py  main.py  perf_tet.py
src/core/: file_handling.py  formatter_threshdolds.py  formatter_thresholds.py  layout_controller.py  layout_manager.py  scheduler.py  sorter.py  style_maps.py
src/readings/: cpu.py  file_handling.py  io.py  memory.py  network.py  nvidia.py  process_monitor.pyx  processes.py  system_pressure.py
src/sm_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ui/: button.py  contentdiff.py  formatters.py
src/ui/dashboards/: cpu.py  io.py  io_totals.py  memory.py  network.py  nvidia.py  processes.py  style_maps.py
